# quark_driver

./: .gitignore  .gitmodules  lock.repos
cameras_bringup/: CMakeLists.txt  package.xml
cameras_bringup/config/: rgbd.yml
cameras_bringup/launch/: bringup.launch.yml  left.launch.yml  oak_d_pro.launch.py
cone_pose_estimator/: CMakeLists.txt  package.xml
cone_pose_estimator/launch/: pose_estimator.launch.yaml
cone_pose_estimator/src/: cone_pose_estimator.cpp
motors_bringup/: CMakeLists.txt  package.xml
motors_bringup/launch/: bringup.launch.yml  bringup_bag.launch.yml  bringup_ds4.launch.yml
motors_bringup/src/: ds4_to_vesc.cpp
motors_control/: CMakeLists.txt  package.xml
parking_camera/: package.xml  setup.cfg  setup.py
parking_camera/parking_camera/: parking_camera.py
perception/camera_publisher/: CMakeLists.txt  package.xml
perception/camera_publisher/include/camera_reader/: camera_publisher.h
perception/camera_publisher/src/: camera_publisher.cpp
perception/cone_detection/: package.xml  setup.py
perception/cone_detection/cone_detection/: camera_sub_node.py  yolov7.py
perception/cone_detection/cone_detection/models/: yolo.py
perception/cone_detection/cone_detection/utils/: experimental.py
perception/cone_detection/launch/: yolo.launch.yml
perception/cone_detection_ncnn/: CMakeLists.txt  package.xml
perception/cone_detection_ncnn/src/: camera_sub.cpp  yolo.cpp
perception/cone_detection_python/: package.xml  setup.cfg  setup.py
perception/cone_detection_python/cone_detection_python/: camera_sub_node.py  yolov7.py
perception/cone_detection_python/cone_detection_python/models/: common.py  experimental.py  yolo.py
perception/cone_detection_python/launch/: yolo.launch.yml
perception/cone_pose_estimator/: CMakeLists.txt
perception/cone_pose_estimator/launch/: pose_estimator.launch.yaml
perception/cone_pose_estimator/src/: cone_pose_estimator.cpp
perception/static_cameras_tf2/: CMakeLists.txt
perception/static_cameras_tf2/src/: cameras_tf2_publisher.cpp
planning/: CMakeLists.txt  package.xml
planning/src/: carrot_planner.cpp
quark_camera_bringup/: CMakeLists.txt  package.xml
quark_camera_bringup/launch/: front.launch.yml  oak_d_pro.launch.py  right.launch.yml
quark_camera_bringup/params/: front_left_cam.yml  front_right_cam.yml
quark_motor_bringup/: CMakeLists.txt  package.xml
quark_motor_bringup/launch/: bringup.launch.yml  bringup_bag.launch.yml  bringup_ds4.launch.yml
quark_motor_bringup/params/: vesc_config.yml
quark_motor_control/: CMakeLists.txt  package.xml
quark_motor_control/src/: motor_controller.cpp
static_cameras_tf2/: package.xml
static_cameras_tf2/src/: cameras_tf2_publisher.cpp
